# elixir-rustler_elixir_fun

./: mix.exs
native/rustler_elixir_fun_nif/: Cargo.toml
